# romlint

./: Cargo.toml
dat/: Cargo.toml
dat/src/: lib.rs
dir_walker/: Cargo.toml
dir_walker/src/: lib.rs
lints/: compressed_file_name.lua  file_mode.lua  loose_file.lua  multifile_archive.lua  obsolete_format.lua  uncompressed_file.lua  unknown_file.lua
no_intro/: Cargo.toml
no_intro/src/: lib.rs
romlint/: Cargo.toml
romlint/src/: ansi.rs  args.rs  config.rs  db.rs  error.rs  filemeta.rs  linter.rs  main.rs  scripts.rs  ui.rs  word_match.rs
romlint/src/commands/: check.rs  dump.rs  lint.rs  mod.rs  scan.rs  watch.rs
romlint/src/rules/: archived_rom_name.rs  file_permissions.rs  mod.rs  multifile_archive.rs  no_archives.rs  no_junk_files.rs  no_loose_files.rs  obsolete_format.rs  uncompressed_file.rs  unknown_rom.rs
src/: ansi.rs  args.rs  db.rs  dir_walker.rs  linter.rs  main.rs  ui.rs  word_match.rs
src/rules/: file_permissions.rs  no_archives.rs  no_junk_files.rs  obsolete_format.rs  uncompressed_file.rs  unknown_rom.rs
