[package]
name = "romlint"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.6.0"
clap = { version = "4.5.16", features = ["derive"] }
dat = { path = "../dat" }
dir_walker = { path = "../dir_walker" }
env_logger = "0.11.5"
futures = "0.3.26"
log = "0.4.22"
nu-ansi-term = "0.50.1"
mlua = { version = "0.9.9", features = ["lua54"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.127"
snafu = "0.8.4"
tokio = { version = "1.25.0", features = ["macros", "rt", "fs", "io-util"] }
toml = "0.8.19"
zip = "2.2.0"
